docs: Swagger de planetas y personajes completo
